# HARC

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/revenuecat_metrics/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py
custom_components/revenuecat_metrics/translations/: en.json
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_sensor.py
tests/fixtures/: chart_mrr_array.json  chart_mrr_history.json  chart_mrr_history_empty.json  chart_trial_conversion_object.json  overview.json  revenue_28d.json
